--- a/testCodes/package.json
+++ b/testCodes/package.json
@@ -1,5 +1,33 @@
 {
   "dependencies": {
-    "axios": "^1.1.3"
+    "@line/bot-sdk": "^7.5.2",
+    "axios": "^1.1.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "https": "^1.0.0",
+    "method": "^2.0.0",
+    "method-override": "^3.0.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "request": "^2.88.2"
+  },
+  "name": "testcodes",
+  "version": "1.run 0.0",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/node": "^7.20.2",
+    "@babel/preset-env": "^7.20.2"
   }
 }
