--- a/testCodes/package.json
+++ b/testCodes/package.json
@@ -18,6 +18,7 @@
   "version": "1.run 0.0",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
